syntax = "proto3";

package utils;

message SearchReq{
  optional string query = 1;
  optional string orderby = 2;
  optional int32 startAt = 3;
  optional int32 limit = 4;
  optional bool isAscending = 5;
}
